@startuml

title __SERVICE's Class Diagram__\n

  namespace service {
    class service.KlientService {
        + KlientService()
        + getKlientPodlaId()
        + getZoznamVsetkych()
        + uloz()
        + zmaz()
        + zmen()
    }
  }
  

  namespace service {
    class service.UcetService {
        + UcetService()
        + getUcetPodlaId()
        + getZoznamVsetkych()
        + uloz()
        + zmaz()
        + zmen()
    }
  }
  

  service.KlientService o-- dao.KlientDao : klientDao
  service.UcetService o-- dao.UcetDao : ucetDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
